# c-flat

./: .gitignore  COMMIT_NAMING.md  Cargo.toml  GRAMMAR.md  LICENSE  README.md  build-for-web.sh  install.sh  main.wasm  main.wat  package-lock.json  run-with-docker.sh  runtime.c  scripts.sh
bitbeat/: Cargo.toml
bitbeat/benches/: fibonacci.rs
bitbeat/src/: decoder.rs  instruction.rs  lib.rs  main.rs
bitbox/: Cargo.toml  README.md  erl_crash.dump
bitbox/examples/: basic.bitbox  factorial.bb  factorial.bitbox  fib.bitbox  import_function.bitbox  looping.bitbox  test.bitbox
bitbox/old_src/: ir.rs  ir_builder.rs  lib.rs  test.rs
bitbox/old_src/emitter/: bitbeat.rs  mod.rs  wasm32.rs  x86_64_linux.rs
bitbox/old_src/testdata/output/: bitbox__test__basic_function_with_if_else.snap.new  bitbox__test__basic_function_with_return.snap  bitbox__test__basic_function_with_return.snap.new
bitbox/snapshots/: factorial.bitbox  factorial.wasm  test.wat
bitbox/src/: cli.rs  error.rs  ir.rs  lib.rs  main.rs  test.rs
bitbox/src/backend/: mod.rs
bitbox/src/backend/bitbeat/: mod.rs
bitbox/src/backend/bitbeat/passes/: emit.rs  mod.rs
bitbox/src/backend/bitbeat/passes/emit/: emit.rs  emitter.rs  instruction.rs  mod.rs
bitbox/src/backend/wasm32/: README.md  mod.rs
bitbox/src/backend/wasm32/passes/: emit.rs  emit_wasm32.rs  instruction.rs  mod.rs
bitbox/src/backend/wasm32/passes/emit/: emit.rs  instruction.rs  mod.rs
bitbox/src/backend/wasm32/passes/emit/emit/: instruction.rs  mod.rs
bitbox/src/backend/x86_64/: README.md
bitbox/src/backend/x86_64/linux/: mod.rs
bitbox/src/backend/x86_64/linux/passes/: mod.rs  virt_reg_rewrite.rs
bitbox/src/backend/x86_64/linux/passes/emit/: allocator.rs  assembler.rs  error.rs  instruction.rs  mod.rs
bitbox/src/backend/x86_64/linux/passes/emit/assembler/: assembler.rs  mod.rs  register.rs
bitbox/src/backend/x86_64/linux/passes/emit_x86_64_linux/: mod.rs
bitbox/src/emitter/: beatbox.rs  bitbeat.rs  mod.rs  wasm32.rs  x86_64_linux.rs
bitbox/src/ir/: builder.rs  instruction.rs  mod.rs
bitbox/src/passes/: control_flow_graph.rs  detect_loops.rs  liveness.rs  local_function_variables.rs  lowering.rs  mod.rs  phi_node_elimination.rs  structuring.rs
bitbox/src/testdata/output/: bitbox__test__array_cfg_wasm32.snap  bitbox__test__array_cfg_x86_64.snap  bitbox__test__array_emit_wasm32.snap  bitbox__test__array_emit_x86_64.snap  bitbox__test__array_liveness_wasm32.snap  bitbox__test__array_liveness_x86_64.snap  bitbox__test__array_local_vars_wasm32.snap  bitbox__test__array_local_vars_x86_64.snap  bitbox__test__array_lowered_ir_x86_64.snap  bitbox__test__array_structuring_wasm32.snap  bitbox__test__array_virt_reg_x86_64.snap  bitbox__test__array_wasm32.snap  bitbox__test__basic_function_with_if_else.snap  bitbox__test__factorial_cfg_wasm32.snap  bitbox__test__factorial_cfg_x86_64.snap  bitbox__test__factorial_emit_bitbeat.snap  bitbox__test__factorial_emit_wasm32.snap  bitbox__test__factorial_liveness_wasm32.snap  bitbox__test__factorial_liveness_x86_64.snap  bitbox__test__factorial_local_vars_wasm32.snap  bitbox__test__factorial_local_vars_x86_64.snap  bitbox__test__factorial_lowered_ir_x86_64.snap  bitbox__test__factorial_structuring_wasm32.snap  bitbox__test__factorial_wasm32.snap  bitbox__test__fib_bitbeat.snap  bitbox__test__fib_cfg_wasm32.snap  bitbox__test__fib_cfg_x86_64.snap  bitbox__test__fib_emit_bitbeat.snap  bitbox__test__fib_emit_wasm32.snap  bitbox__test__fib_emit_x86_64.snap  bitbox__test__fib_liveness_wasm32.snap  bitbox__test__fib_liveness_x86_64.snap  bitbox__test__fib_local_vars_wasm32.snap  bitbox__test__fib_local_vars_x86_64.snap  bitbox__test__fib_lowered_ir_x86_64.snap  bitbox__test__fib_structuring_wasm32.snap  bitbox__test__fib_virt_reg_x86_64.snap  bitbox__test__fib_wasm32.snap  bitbox__test__fib_x86_64_linux.snap  bitbox__test__looping_cfg_wasm32.snap  (+7 more)
bitbox/src/text/: error.rs  mod.rs
bitbox/src/text/emitter/: mod.rs
bitbox/src/text/lexer/: lexer.rs  mod.rs  scanner.rs  test.rs  token.rs
bitbox/src/text/lexer/testdata/output/: bitbox__lexer__test__binary.snap  bitbox__lexer__test__import_function.snap  bitbox__text__lexer__test__binary.snap  bitbox__text__lexer__test__import_function.snap  bitbox__text__lexer__test__looping.snap
bitbox/src/text/parser/: ast.rs  mod.rs  test.rs
bitbox/src/text/parser/testdata/output/: bitbox__parser__test__binary.snap  bitbox__parser__test__import_function.snap  bitbox__text__parser__test__binary.snap  bitbox__text__parser__test__import_function.snap  bitbox__text__parser__test__looping.snap
bitbox/src/text/semantic_analyzer/: mod.rs
bootstrap/: Makefile
editor/: cb.vim
examples/: alloc.cb  app.js  array.cb  array_list.cb  basic  basic.cb  basic.s  basic.wasm  bitwise.cb  char.cb  enum.cb  extern-rand.cb  extern.cb  factorial.cb  factorial.wasm  fib.cb  fib.wasm  fix_array.cb  float.cb  generics.cb  hello_world.cb  if-else-mod.cb  if-else.cb  ifelse.cb  index.html  macro.cb  mul.cb  parser.cb  raylib  raylib-snake.cb  raylib.cb  rule110.cb  rule110.wasm  size_of.cb  struct.cb  (+7 more)
(+302 files in other folders)
