[package]
name = "c-flat"
version = "0.1.0"
edition = "2024"

[dependencies]
bitbeat = { version = "0.1.0", path = "bitbeat" }
bitbox = { version = "0.1.0", path = "bitbox" }
wasm-bindgen = {version = "0.2.105", optional = true}
js-sys = {version = "0.3.82", optional = true}
report = { version = "0.1.0", path = "report" }
runtime = { version = "0.1.0", path = "runtime", optional = true }
web-sys = { version = "0.3.97", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }


[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
pretty_assertions = "1.4.0"

[workspace]
members = ["bitbeat", "bitbox", "report", "runtime"]

[features]
debug = []
wasm-runtime = ["runtime"]
default = []
wasm = ["wasm-bindgen", "js-sys", "bitbox/wasm", "web-sys", "console_error_panic_hook"]
uuids = ["bitbox/uuids"]
web-sys = ["dep:web-sys"]

[lib]
name = "cflat"
features = ["wasm-runtime"]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cflat"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
