[package]
name = "bitbeat"
version = "0.1.0"
edition = "2021"

[dependencies]
ron = "0.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }

[dev-dependencies]
criterion = "0.6.0"

[lib]
name = "bitbeat"
path = "src/lib.rs"

[[bin]]
name = "bitbeat"
path = "src/main.rs"

[[bench]]
name = "fibonacci"
harness = false
