[package]
name = "bitbox"
version = "0.1.0"
edition = "2024"

[dependencies]
bitbeat = { version = "0.1.0", path = "../bitbeat" }
report = { version = "0.1.0", path = "../report" }
uuid = { version = "1.18.1", features = ["v4"], optional = true }
wasm-encoder = "0.244.0"
# used for colored output for ir dump
yansi = "1.0.1"
# iced-x86 = "1.21.0"
wasm-bindgen = {version = "0.2.105", optional = true}
wasmprinter = "0.244.0"
ron = "0.12.0"

[dev-dependencies]
insta = { version = "1.42.2", features = ["yaml"] }
pretty_assertions = "1.4.1"

[features]
default = []
wasm = ["wasm-bindgen", "uuid", "uuid/js"]
uuids = ["uuid"]

[lib]
name = "bitbox"
path = "src/lib.rs"

[[bin]]
name = "bitbox"
path = "src/main.rs"
